# web-pyide

./: .env.development  .eslintrc.cjs  .gitignore  README.md  components.d.ts  env.d.ts  index.html  package.json  tsconfig.app.json  typescript  vite.config.ts
.webide-server/projects/ide/VmExample/: .config  ReadMe.md
.webide-server/projects/ide/VmExample/scripts/: setup.py
.webide-server/projects/ide/example/: .config  main.py
.webide-server/projects/ide/example/utils/: calc.py
.webide-server/projects/ide/test/: .config  hello.py  main.py  test7.py
.webide-server/projects/uploads/: emoji-2.11.0-py2.py3-none-any.whl
server/: .env  .env.prod  .gitignore  pyproject.toml
server/app/: main.py
server/app/api/: main.py
server/app/api/routes/: ide.py  test.py  websocket.py
server/app/common/: config.py
server/app/core/: config.py
server/app/handlers/: handler_info.py
server/app/models/: project_items.py  response.py
server/app/utils/: helper.py  pty.py  resource.py  subprogram_thread.py  taskmanager.py  winpty.py
src/: App.vue  main.ts
src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
src/components/VmIde/components/: LabelItem.vue
src/components/VmIde/pages/ide/: CodeTabs.vue  EdgeContainer.vue  IdeEditor.vue  MainContent.vue  (+4 more)
src/components/element/: VmIde.vue
src/components/icons/: VscodeIconsFileTypePython.vue
src/components/providers/: WebIdeProviders.vue
src/components/ui/button/: Button.vue
src/router/: index.ts
src/stores/: ide.ts  websocket.ts
src/types/: ide.ts
src/types/declares/: module.d.ts
src/utils/: index.ts
src/views/: ComponentsTest.vue  VmIde.vue
(+53 files in other folders)
