[tool.poetry]
name = "pyide"
version = "0.1.0"
description = ""
authors = ["Star-tears <star-tears@outlook.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
jedi = "^0.19.1"
websockets = "^12.0"
jinja2 = "^3.1.4"
pywinpty = { version = "^2.0.13", platform = "win32"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyide =  'app.main:main'